100% cov for random and fib controller.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,12 @@
         "initializer_list": "cpp",
         "ranges": "cpp",
         "span": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "*.tcc": "cpp",
+        "random": "cpp",
+        "fstream": "cpp",
+        "iostream": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp"
     }
 }
